2021-10-20 Danilo Chang

	* Try to fix Build fails on 4.5.1 issue
	  Add flag to check VideoCapture/VideoWriter property

2021-10-19 Danilo Chang

	* Apply Christian's patch (Refactoring)

2021-10-14 Danilo Chang

	* README.md: Add more info, prepare re-tag
	* Bump version to v0.11

2021-10-12 Danilo Chang

	* Implement command: getDerivKernels
	* Implement command: findNonZero

2021-10-11 Danilo Chang

	* Implement command: LineSegmentDetector

2021-10-10 Danilo Chang

	* Apply Christian's patch (Refactoring)
	* Update NMSBoxes command

2021-10-09 Danilo Chang

	* Update blobFromImage command (internal changes)
	* Implement command: getTextSize, getFontScaleFromHeight

2021-10-08 Danilo Chang

	* Apply Christian's patch:
	  to/from bytearray methods plus refactoring
	* Add NMSBoxes command
	* Add col and row command to MATRIX function
	* Add forwardWithNames command to READNET function
	* Add getUnconnectedOutLayers command to READNET function
	* Add getLayerNames command to READNET function
	* Implement command: estimateAffine3D, estimateAffinePartial2D

2021-10-07 Danilo Chang

	* Bump version to v0.10
	* Update drawContours command (interface changed)

2021-10-06 Danilo Chang

	* Implement command: GeneralizedHoughBallard, GeneralizedHoughGuil

2021-10-05 Danilo Chang

	* Implement command: max, min
	* Implement command: approxPolyDP
	* Implement command: findContoursWithHierarchy, drawContoursWithHierarchy
	* Implement command: readOpticalFlow, writeOpticalFlow

2021-10-04 Danilo Chang

	* Implement command: AffineFeature (required version 4.5.0)
	  I use TCL_USE_SIFT flag for this command.
	* Update TrainData command
	* Implement command: sortIdx, repeat

2021-10-03 Danilo Chang

	* Implement command: solveCubic, solvePoly
	* Implement command: estimateAffine2D
	* Improve findHomography command (interface changed)

2021-10-02 Danilo Chang

	* Apply Christian's patch:
	  Improved Tk photo support plus POC VecTcl support
	* configure.ac: Add -std=c++11 flag