@@ -629,6 +629,221 @@ int BackgroundSubtractorMOG2(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *co
 }
 
 
+#ifdef TCL_USE_OPENCV4
+#if CV_VERSION_GREATER_OR_EQUAL(4, 5, 1)
+static void TrackerMIL_DESTRUCTOR(void *cd)
+{
+    Opencv_Data *cvd = (Opencv_Data *)cd;
+
+    if (cvd->trackerMIL) {
+        cvd->trackerMIL.release();
+    }
+    cvd->cmd_trackerMIL = NULL;
+}
+
+
+static int TrackerMIL_FUNCTION(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv)
+{
+    Opencv_Data *cvd = (Opencv_Data *)cd;
+    int choice;
+
+    static const char *FUNC_strs[] = {
+        "init",
+        "update",
+        "close",
+        "_command",
+        "_name",
+        "_type",
+        0
+    };
+
+    enum FUNC_enum {
+        FUNC_INIT,
+        FUNC_UPDATE,
+        FUNC_CLOSE,
+        FUNC__COMMAND,
+        FUNC__NAME,
+        FUNC__TYPE,
+    };
+
+    if (objc < 2) {
+        Tcl_WrongNumArgs(interp, 1, objv, "SUBCOMMAND ...");
+        return TCL_ERROR;
+    }
+
+    if (Tcl_GetIndexFromObj(interp, objv[1], FUNC_strs, "option", 0, &choice)) {
+        return TCL_ERROR;
+    }
+
+    if (cvd->trackerMIL == nullptr) {
+        Opencv_SetResult(interp, cv::Error::StsNullPtr, "singleton not instantiated");
+        return TCL_ERROR;
+    }
+
+    switch ((enum FUNC_enum)choice) {
+        case FUNC_INIT: {
+            int x = 0, y = 0, width = 0, height = 0;
+            cv::Rect window;
+            cv::Mat *mat1;
+
+            if (objc != 7) {
+                Tcl_WrongNumArgs(interp, 2, objv, "matrix x y width height");
+                return TCL_ERROR;
+            }
+
+            mat1 = (cv::Mat *) Opencv_FindHandle(cd, interp, OPENCV_MAT, objv[2]);
+            if (!mat1) {
+                return TCL_ERROR;
+            }
+
+            if (Tcl_GetIntFromObj(interp, objv[3], &x) != TCL_OK) {
+                return TCL_ERROR;
+            }
+
+            if (Tcl_GetIntFromObj(interp, objv[4], &y) != TCL_OK) {
+                return TCL_ERROR;
+            }
+
+            if (Tcl_GetIntFromObj(interp, objv[5], &width) != TCL_OK) {
+                return TCL_ERROR;
+            }
+
+            if (Tcl_GetIntFromObj(interp, objv[6], &height) != TCL_OK) {
+                return TCL_ERROR;
+            }
+
+            try {
+                window = cv::Rect(x, y, width, height);
+                cvd->trackerMIL->init(*mat1, window);
+            } catch (const cv::Exception &ex) {
+                return Opencv_Exc2Tcl(interp, &ex);
+            } catch (...) {
+                return Opencv_Exc2Tcl(interp, NULL);
+            }
+
+            break;
+        }
+        case FUNC_UPDATE: {
+            bool retval = false;
+            cv::Rect window;
+            cv::Mat *mat1;
+
+            if (objc != 3) {
+                Tcl_WrongNumArgs(interp, 2, objv, "matrix");
+                return TCL_ERROR;
+            }
+
+            mat1 = (cv::Mat *) Opencv_FindHandle(cd, interp, OPENCV_MAT, objv[2]);
+            if (!mat1) {
+                return TCL_ERROR;
+            }
+
+            try {
+                retval = cvd->trackerMIL->update(*mat1, window);
+            } catch (const cv::Exception &ex) {
+                return Opencv_Exc2Tcl(interp, &ex);
+            } catch (...) {
+                return Opencv_Exc2Tcl(interp, NULL);
+            }
+
+            Tcl_Obj *list[5];
+
+            list[0] = Tcl_NewBooleanObj((int) retval);
+            list[1] = Tcl_NewIntObj(window.x);
+            list[2] = Tcl_NewIntObj(window.y);
+            list[3] = Tcl_NewIntObj(window.width);
+            list[4] = Tcl_NewIntObj(window.height);
+
+            Tcl_SetObjResult(interp, Tcl_NewListObj(5, list));
+
+            break;
+        }
+        case FUNC_CLOSE: {
+            if (objc != 2) {
+                Tcl_WrongNumArgs(interp, 2, objv, 0);
+                return TCL_ERROR;
+            }
+
+            if (cvd->cmd_trackerMIL) {
+                Tcl_DeleteCommandFromToken(interp, cvd->cmd_trackerMIL);
+            }
+
+            break;
+        }
+        case FUNC__COMMAND:
+        case FUNC__NAME: {
+            Tcl_Obj *obj;
+            if (objc != 2) {
+                Tcl_WrongNumArgs(interp, 2, objv, 0);
+                return TCL_ERROR;
+            }
+
+            obj = Tcl_NewObj();
+            if (cvd->cmd_trackerMIL) {
+                Tcl_GetCommandFullName(interp, cvd->cmd_trackerMIL, obj);
+            }
+            Tcl_SetObjResult(interp, obj);
+            break;
+        }
+        case FUNC__TYPE: {
+            if (objc != 2) {
+                Tcl_WrongNumArgs(interp, 2, objv, 0);
+                return TCL_ERROR;
+            }
+
+            Tcl_SetResult(interp, (char *) "cv::TrackerMIL", TCL_STATIC);
+            break;
+        }
+
+    }
+
+    return TCL_OK;
+}
+
+
+int TrackerMIL(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv)
+{
+    Opencv_Data *cvd = (Opencv_Data *)cd;
+    Tcl_Obj *pResultStr = NULL;
+    cv::Ptr<cv::TrackerMIL> trackerMIL;
+    cv::TrackerMIL::Params parameters = cv::TrackerMIL::Params();
+
+    if (objc != 1) {
+        Tcl_WrongNumArgs(interp, 1, objv, 0);
+        return TCL_ERROR;
+    }
+
+    try {
+        trackerMIL = cv::TrackerMIL::create(parameters);
+
+        if (trackerMIL == nullptr) {
+            CV_Error(cv::Error::StsNullPtr, "TrackerMIL nullptr");
+        }
+    } catch (const cv::Exception &ex) {
+        return Opencv_Exc2Tcl(interp, &ex);
+    } catch (...) {
+        return Opencv_Exc2Tcl(interp, NULL);
+    }
+
+    pResultStr = Tcl_NewStringObj("::cv-trackerMIL", -1);
+
+    if (cvd->cmd_trackerMIL) {
+        Tcl_DeleteCommandFromToken(interp, cvd->cmd_trackerMIL);
+    }
+    cvd->cmd_trackerMIL =
+        Tcl_CreateObjCommand(interp, "::cv-trackerMIL",
+            (Tcl_ObjCmdProc *) TrackerMIL_FUNCTION,
+            cd, (Tcl_CmdDeleteProc *) TrackerMIL_DESTRUCTOR);
+
+    cvd->trackerMIL = trackerMIL;
+
+    Tcl_SetObjResult(interp, pResultStr);
+    return TCL_OK;
+}
+#endif
+#endif
+
+
 int meanShift(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv)
 {
     int retval = 0;
